--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/r0b3rth42/cfg-dev
+          uri: https://github.com/bootcamp59/cfg-dev
           clone-on-start: true
           default-label: develop
 
